# YKTProject

./: settings.gradle
CommonApp/: build.gradle
CommonApp/src/main/: AndroidManifest.xml
CommonApp/src/main/res/layout/: activity_main.xml  item_a.xml  item_b.xml  item_c.xml  (+3 more)
DBModule/: build.gradle
DBModule/src/main/: AndroidManifest.xml
DensityModule/: build.gradle
DensityModule/src/main/: AndroidManifest.xml
GifLibrary/: CMakeLists.txt  build.gradle
GifLibrary/src/main/: AndroidManifest.xml
GifLibrary/src/main/cpp/: bitmap.c  gif.c  gif.h  jni.c  native-lib.cpp
NDKModule/: CMakeLists.txt  build.gradle
NDKModule/src/androidTest/java/com/mm/zdy/yktproject/: ExampleInstrumentedTest.java
NDKModule/src/main/: AndroidManifest.xml
NDKModule/src/main/cpp/: CMakeLists.txt  bitmap.c  control.c  gif.c  gif.h  jni.c  native-lib.cpp  opengl.c
NDKModule/src/main/java/com/mm/zdy/yktproject/: GifInfoHandle.java  JNIUtil.java  MainActivity.java
NDKModule/src/main/res/values/: strings.xml
NDKModule/src/test/java/com/mm/zdy/yktproject/: ExampleUnitTest.java
PluginLibrary/: build.gradle
PluginLibrary/src/main/: AndroidManifest.xml
QRCodeLibrary/: build.gradle
QRCodeLibrary/src/main/: AndroidManifest.xml
QRCodeModule/: build.gradle
QRCodeModule/src/main/: AndroidManifest.xml
RecyclerAdapter/: build.gradle
RecyclerAdapterLibrary/src/main/: AndroidManifest.xml
UIScreen/: build.gradle
UIScreen/src/main/: AndroidManifest.xml
UiTreeModule/: build.gradle
UiTreeModule/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+114 files in other folders)
